fixing contact img vertical alignment

--- a/Assets/Style/index.css
+++ b/Assets/Style/index.css
@@ -356,7 +356,7 @@ section.contact-us textarea {
 section.contact-us .contact-img img {
   height: 500px;
   position: absolute;
-  bottom: 19.5%;
+  bottom: 19%;
   right: 3%;
 }
 
